--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <script src="./script.js"></script>
+    <script src="./script.js" async defer></script>
     <div></div>
+    <dialog>
+        <form>
+            <div class="label-input">
+                <input type="text" id="player-1" name="player-1" value="player-1" required>
+                <label for="player-1" id="name-label">X</label>
+            </div>
+            <div class="label-input">
+                <input type="text" id="player-2" name="player-2" value="player-2" required>
+                <label for="player-2" id="player-2">O</label>
+            </div>
+        </form>
+        <button id="submit" type="submit" value="Submit">Submit</button>
+        <button id="cancel">Cancel</button>
+    </dialog>
+    <div class="main-container">
+        <div class="flex-container">
+            <div id="container">
+            </div>
+            <div class="buttons">
+                <button id="reset" onclick="resetGameBoard()">Reset</button>
+            </div>
+        </div>
+
+    </div>
+
+    <button id="show-button">Add new book</button>
 </body>
+
 </html>
