Remove cancel button, Add play button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form>
             <div class="label-input">
                 <input type="text" id="player-1" name="player-1" value="player-1" required>
-                <label for="player-1" id="name-label">X</label>
+                <label for="player-1" id="player-1">X</label>
             </div>
             <div class="label-input">
                 <input type="text" id="player-2" name="player-2" value="player-2" required>
