Remove cancel button, Add play button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
                 <label for="player-2" id="player-2">O</label>
             </div>
         </form>
-        <button id="submit" type="submit" value="Submit">Submit</button>
-        <button id="cancel">Cancel</button>
+        <button id="submit" type="submit" value="Submit">Play</button>
     </dialog>
     <div class="main-container">
         <div class="flex-container">
