--- a/index.html
+++ b/index.html
@@ -9,29 +9,42 @@
 
 <body>
     <script src="./script.js" async defer></script>
-    <div></div>
-    <dialog>
-        <form>
-            <div class="label-input">
-                <input type="text" id="player-1" name="player-1" value="player-1" required>
-                <label for="player-1" id="player-1">X</label>
-            </div>
-            <div class="label-input">
-                <input type="text" id="player-2" name="player-2" value="player-2" required>
-                <label for="player-2" id="player-2">O</label>
-            </div>
-        </form>
-        <button id="submit" type="submit" value="Submit">Play</button>
-    </dialog>
-    <div class="main-container">
-        <div class="flex-container">
-            <div id="container">
-            </div>
-            <div class="buttons">
-                <button id="reset" onclick="resetGameBoard()">Reset</button>
+    <div id="wrapper">
+        <div class="header">
+            <div class="header-logo">Tic Tac Toe</div>
+            <ul>
+                <il><a href="https://github.com/xonin-hush/Odin-Tic-Tac-Toe">Repo's page</a></il>
+                <il><a href="https://github.com/xonin-hush/"> Visit my github page</a></il>
+                <il><a href="https://www.theodinproject.com/lessons/foundations-motivation-and-mindset">Motivation and Mindset</a></il>
+
+            </ul>
+
+        </div>
+
+        <dialog>
+            <form>
+                <div class="label-input">
+                    <input type="text" id="player-1" name="player-1" value="player-1" required>
+                    <label for="player-1" id="player-1">X</label>
+                </div>
+                <div class="label-input">
+                    <input type="text" id="player-2" name="player-2" value="player-2" required>
+                    <label for="player-2" id="player-2">O</label>
+                </div>
+            </form>
+            <button id="submit" type="submit" value="Submit">Play</button>
+        </dialog>
+        <div class="main-container">
+            <div class="flex-container">
+                <div id="container">
+                </div>
+                <div class="buttons">
+                    <button id="reset" onclick="resetGameBoard()">Reset</button>
+                </div>
             </div>
         </div>
     </div>
+    <div class="footer">made by Xonin</div>
 </body>
 
 </html>
