--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
 
 
             <div class="main-container">
-                <div id="status1"></div>
-                <div id="status2"></div>
-                <div class="flex-container">
-                    <div id="container">
-                    </div>
-                    <div class="buttons">
-                        <button id="reset" onclick="resetGameBoard()">Reset</button>
-                    </div>
+                <div id="display-bar">
+                    <div id="status1"></div>
+                    <div id="status2"></div>
                 </div>
+                <div id="container">
+                </div>
+                <div class="buttons">
+                    <button id="reset" onclick="resetGameBoard()">Reset</button>
+                </div>
+
             </div>
         </div>
     </div>
