Align Display-bar insides

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 
             <div class="main-container">
                 <div id="display-bar">
-                    <div id="status1"></div>
-                    <div id="status2"></div>
+                    <div id="status">
+                        <div id="status1"></div>
+                        <div id="status2"></div>
+                    </div>
                 </div>
                 <div id="container">
                 </div>
